<resources>
    <string name="app_name"><html><font color="#e1e1e1" size="20">Looms</font></html></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Looms</string>
    <string name="nav_header_subtitle">Weave Your Life Your Way!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="category">Category</string>
    <string name="style">Style</string>
    <string name="fabric">Fabric</string>
    <string name="occasion">Occasion</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="logout">Logout</string>
    <string name="shop_by">Shop By</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="search">Search</string>
    <string name="hot_right_now">____Hot Right Now____</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="my_cart">My Cart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="categories">Categories</string>
    <string name="share">Share</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="checkout">Checkout</string>
    <string name="order_summery">Order Summery</string>
    <string name="total_mrp_incl_of_all_taxes">Total MRP(incl of all taxes)</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="free">FREE</string>
    <string name="discount">Discount</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="color">Color :</string>
    <string name="qty">QTY :</string>
    <string name="remove">Remove</string>
    <string name="save_to_wishlist">Move to wishList</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="move_to_bag">Move TO Bag</string>
    <string name="continue_shopping">Continue Shopping</string>
</resources>
